dist/1.0/bin/sample/retrieveUnpackaged/objects/Case_Bundle__c.object
<CustomObject>
    <description>Objects stores the information about Service Bundles related with Cases</description>
    <fields>
        <fullName>Activation_Date__c</fullName>
        <description>Date when selected suspended service should be activated</description>
        <inlineHelpText>Date when selected suspended service should be activated</inlineHelpText>
        <label>Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Basic_Currrency__c</fullName>
        <description>Currency used for reporting of service Old Monthly Recurring  Prices  [CARE_PL_777 :Old Monthly Recuring Price on case / opp]</description>
        <inlineHelpText>Currency used for reporting of service Old Monthly Recurring  Prices</inlineHelpText>
        <label>Basic Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HUF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Billing_End_Date__c</fullName>
        <description>Date, when selected service should be stopped billed [CARE_364 Service termination end date and different billling service end date]</description>
        <inlineHelpText>Date, when selected service should be stopped billed</inlineHelpText>
        <label>Billing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case with which service is related to</description>
        <inlineHelpText>Case with which service is related to</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Bundles</relationshipLabel>
        <relationshipName>Case_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Modification_Date__c</fullName>
        <description>Date, when service modifications should take affect</description>
        <inlineHelpText>Date, when service modifications should take affect</inlineHelpText>
        <label>Modification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Monthly_Recurring_Price__c</fullName>
        <description>Value used for reporting and services which are going to be terminated [CARE_PL_777 :Old Monthly Recuring Price on case / opp]</description>
        <inlineHelpText>Value used for reporting and services which are going to be terminated</inlineHelpText>
        <label>Old Monthly Recurring Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Penalty_Fee__c</fullName>
        <description>Penalty fee which needs to be paid by customer in case of earlier contract termination. Used for reporting of company additional income.</description>
        <inlineHelpText>Penalty fee which needs to be paid by customer in case of earlier contract termination. Used for reporting of company additional income.</inlineHelpText>
        <label>Penalty Fee</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Service Bundle related to the case</description>
        <inlineHelpText>Service Bundle related to the case</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Case Bundles</relationshipLabel>
        <relationshipName>Case_Bundles</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Currency__c</fullName>
        <description>Service Bundle regular currency</description>
        <formula>TEXT(Service_Bundle__r.CurrencyIsoCode)</formula>
        <inlineHelpText>Service Bundle regular currency</inlineHelpText>
        <label>Service Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Suspension_Date__c</fullName>
        <description>Date when selected service should be suspended</description>
        <inlineHelpText>Date when selected service should be suspended</inlineHelpText>
        <label>Suspension Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <description>Date when selected service should be terminated</description>
        <inlineHelpText>Date when selected service should be terminated</inlineHelpText>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <label>Case Bundle</label>
    <nameField>
        <displayFormat>CBU{000000000}</displayFormat>
        <label>Case Bundle No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>